k8s/wisecow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  namespace: wisecow
  labels:
    app: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: wisecow:latest        # will be loaded into Kind in the workflow
          imagePullPolicy: IfNotPresent   # don't try to pull if image exists locally on node
          ports:
            - containerPort: 4499
readinessProbe:
            tcpSocket:
              port: 4499
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
